--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "GPL",
   "dependencies": {
     "choo": "^5.6.2",
+    "injestdb": "^2.2.2",
+    "monotonic-timestamp-base36": "^1.0.0",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
