--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "GPL",
   "dependencies": {
     "choo": "^5.6.2",
+    "commonmark": "^0.28.1",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
