--- a/.babelrc
+++ b/.babelrc
@@ -1,1 +1,6 @@
-{ "presets": ["es2017"] }
+{
+    "presets": ["es2017", "stage-0"],
+    "plugins": [
+        "transform-es2015-modules-amd"
+    ]
+}
